# latence-python

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  Makefile  README.md  SDK_TUTORIAL.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: README.md  chunking.md  colbert.md  colpali.md  compression.md  dataset_intelligence.md  document_intelligence.md  embed.md  embedding.md  enrichment.md  extraction.md  ontology.md  pipelines.md  redaction.md  trace.md
examples/: pipeline.yml
notebooks/: _test_utils.py  compress_documents.ipynb  cost-efficiency_simulator.ipynb  diverse_file_processing.ipynb  embed_anything.ipynb  end-to-end.ipynb  extract_and_redact_pii.ipynb  extract_from_docs.ipynb  happy_path_trace.py  knowledge_graph_builder.ipynb
src/latence/: __init__.py  _base.py  _client.py  _constants.py  _deprecation.py  _exceptions.py  _logging.py  _retry.py  _utils.py  _version.py
src/latence/_models/: __init__.py  chunking.py  colbert.py  colpali.py  common.py  compression.py  dataset_intelligence_service.py  document_intelligence.py  embed.py  embedding.py  enrichment.py  extraction.py  jobs.py  ontology.py  pipeline.py  redaction.py  trace.py
src/latence/_pipeline/: __init__.py  builder.py  config_loader.py  data_package.py  job.py  spec.py  validator.py
src/latence/pipelines/: PIPELINE_SPEC.md  __init__.py
src/latence/resources/: __init__.py  _base.py  chunking.py  colbert.py  colpali.py  compression.py  (+13 more)
tests/: __init__.py  test_builder_validation.py  test_chunking.py  test_data_package.py  test_dataset_intelligence.py  test_enrichment.py  test_models.py  test_pipeline.py  test_refinery.py  test_sdk_parity.py  test_trace.py
tests/integration/: __init__.py  test_api_smoke.py  test_di_e2e.py  test_parity_check.py  test_pipeline_e2e.py
(+1 files in other folders)
