[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latence"
dynamic = ["version"]
description = "Official Python SDK for Latence AI API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Latence AI", email = "support@latence.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx[http2]>=0.27.0,<1",
    "pydantic>=2.0.0,<3",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://latence.ai"
Documentation = "https://docs.latence.ai"
Repository = "https://github.com/latenceai/latence-python"
Issues = "https://github.com/latenceai/latence-python/issues"
Changelog = "https://github.com/latenceai/latence-python/releases"

[tool.hatch.version]
path = "src/latence/_version.py"
pattern = 'VERSION = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/latence"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"
